Pequeñas correcciones en archivo README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Esta guia esta elaborada por Codigo Python [www.codigopython.com.ar] y todos sus colaboradores.
+Esta guia esta elaborada por Codigo Python [http://www.codigopython.com.ar] y todos sus colaboradores.
 
-Esta guia esta formateada usando txt2tags [txt2tags.org]
+Esta guia esta formateada usando txt2tags [http://txt2tags.org]
 
 Licencia:
 This work is licensed under the Creative Commons Atribución-CompartirIgual 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/3.0/ or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
