Se agrega la subseccion 'Colores'

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,3 +14,6 @@
         * Correcciones menores
         * Se crea la subseccion "Unidades de medida"
         * Se corrigen errores de ortografía
+
+2011-11-10 Alejandro Alvarez <contacto@codigopython.com.ar>
+        * Se crea la subseccion "Colores"
