Correcciones menores en la subseccion Colores

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,3 +17,6 @@
 
 2011-11-10 Alejandro Alvarez <contacto@codigopython.com.ar>
         * Se crea la subseccion "Colores"
+
+2011-11-13 Alejandro Alvarez <contacto@codigopython.com.ar>
+        * Correcciones menores en la subseccion "Colores"
