Se incluye un link hacia el foro del proyecto

--- a/README
+++ b/README
@@ -1,6 +1,12 @@
-Esta guía esta elaborada por Código Python [http://www.codigopython.com.ar] y todos sus colaboradores.
+Guia para el desarrollo de aplicaciones en Tkinter
 
-Esta guía esta formateada usando txt2tags [http://txt2tags.org]
+
+Esta guía esta elaborada por Código Python (http://www.codigopython.com.ar) y todos sus colaboradores.
+
+Esta guía esta formateada usando txt2tags (http://txt2tags.org)
+
+Consultas:
+Para cualquier consulta no dudes en plantearla en nuestro foro (http://foro.codigopython.com.ar/forum-4.html)
 
 Licencia:
 This work is licensed under the Creative Commons Atribución-CompartirIgual 3.0 Unported License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/3.0/ or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
