Se añade el metodo withdraw con descripcion y ejemplo

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,3 +27,6 @@
 
 2011-11-26 Alejandro Alvarez <contacto@codigopython.com.ar>
         * Se añade el metodo geometry con descripcion y ejemplo
+
+2011-11-26 Alejandro Alvarez <contacto@codigopython.com.ar>
+        * Se añade el metodo withdraw con descripcion y ejemplo
