--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,3 +30,6 @@
 
 2011-11-26 Alejandro Alvarez <contacto@codigopython.com.ar>
         * Se añade el metodo withdraw con descripcion y ejemplo
+
+2011-12-01 Alejandro Alvarez <contacto@codigopython.com.ar>
+        * Se añade el metodo transient con descripcion y ejemplo
